actualización como alfa de index & landing Page

--- a/jade/subeTuEvento.jade
+++ b/jade/subeTuEvento.jade
@@ -36,48 +36,18 @@ head
 	link(rel="icon" type="image/png" href="images/icon.png")
 	
 	//Icon Font
-	link(href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet")
-
-	//Normalize
-	link(href="css/normalize.css" rel="stylesheet")
 
 	//Roboto Font
 	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet")
 
-	//Agora Media Queris
-	link(rel="stylesheet" href="css/agora-mediaQueries.css")
+	//Normalize
+	link(href="css/normalize.css" rel="stylesheet")
 	
 	//Landing Page
-	link(rel="stylesheet" href="css/agora-subeTuEvento.css")
+	link(rel="stylesheet" href="css/subeTuEvento.css")
 
 body
 	
-	//- //Barra de Navegación
-	//- nav.menuNavegacionVertical
-	//- 	div.menuNavegacion__home
-	//- 		a(href="index.html"): i.icon-a.icono--menu
-	//- 	div.menuNavegacionVertical__items
-	//- 		ul.menuNavegacionVertical--ul
-	//- 			li: a(href="#agora"): i.icon-agora.icono--menu
-	//- 			li: a(href="#alfa"): i.icon-alfa.icono--menu
-	//- 			li: a(href="#descubre"): i.icon-descubre.icono--menu
-	//- 			li: a(href="#explora"): i.icon-explora.icono--menu
-	//- 			li: a(href="#comunica"): i.icon-comunica.icono--menu
-	//- 			li: a(href="#crea"): i.icon-crea.icono--menu
-	//- 			li: a(href="#boletos"): i.icon-boletos.icono--menu
-	//- 			li: a(href="#gotoAgora"): i.icon-go.icono--menu
-	//- 			li: a(href="#equipo"): i.icon-equipo.icono--menu
-	//- 	div.menuNavegacionVertical__back
-	//- 		a(href="#inicio"): i.icon-back.icono--back
-
-			
-
-	//- nav.menuNavegacionApaisado
-	//- 	div: i.icon-a
-	//- 	div: i.icon-menu
-	
-	//- //Back
-	//- a.volver.flexRow(href="#inicio"): i.icon-back.icono--menu
 div.contenedor
 	//SECCIÓN INICIO 
 	section#inicio.inicio.flexBox__Row
@@ -91,10 +61,6 @@ div.contenedor
 				strong crea 
 				| el espacio para el evento que organizas y has que 
 				strong todos lo vean.
-			
-
-
-	
 			
 		
 	//SECCIÓN ENVÍA
