--- a/css/cssssss/agora-mediaQueries.css
+++ b/css/cssssss/agora-mediaQueries.css
@@ -5,64 +5,6 @@
 /*////---- P L A T A F O R M A ----\\\\*/
 	
 	/* Tarjetas */	
-		.contenedorTarjetasEventos{
-			width: 100%;
-		    height: 100%;
-		    position: relative;
-		    margin-top: 4rem;
-		    left: 0;
-		    bottom: 0;
-		    padding: 0 1rem;
-		}
-
-		.columnaTarjetas {
-			-webkit-column-count:2;
-			-moz-column-count:2;
-			column-count:2;
-			-webkit-column-gap: 1rem;
-			-moz-column-gap: 1rem;
-			column-gap: 1rem;
-		}
-
-		.tarjeta {
-			
-		}
-		
-		.tarjeta__contenedor {	
-
-		}
-		
-		.fechaEvento {	
-			
-		} 
-
-		.iconoTipo--tarjeta {
-				
-		}
-
-		.imagenEvento {
-			
-		}
-
-		.nombreEvento {	
-			
-		}
-
-		.descripcionEvento{	
-			
-		}
-
-		.sedeEvento {	
-
-		}
-
-		.organizadorEvento {	
-			
-		}
-
-		.iconoRedes--tarjeta {
-				
-		}
 
 		/*
 		.tarjeta__contenedor {	
@@ -336,11 +278,9 @@
 			z-index: 7;
 			text-align: center;
 		}
-
-		
 }
 
-/*md*//*Cambio pPosición del Menú*/
+/*md*//*Cambio Posición del Menú*/
 /*Se cambio de 768px a 820px por Facebook Tabs*/
 @media (min-width:820px)  {
 
