--- a/scss/landingPage.scss
+++ b/scss/landingPage.scss
@@ -79,10 +79,8 @@
 /* -------- Fase Beta -------- */
 @import "landingPage/_beta.scss";
 
-
-/* -------- ágora -------- */
-@import "landingPage/_agora.scss";
-
+/* -------- Descripción -------- */
+@import "landingPage/_descripcion.scss"; 
 
 /* -------- Descubre -------- */
 @import "landingPage/_descubre.scss";
