--- a/css/agora.css
+++ b/css/agora.css
@@ -52,7 +52,7 @@
     width: 50%;
     height: 100%;
     font-size: 1.5rem; }
-  .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__historial, .menuNavegacion__crear {
+  .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
     display: none; }
   .menuNavegacion__botonMenu {
     width: 50%;
@@ -126,6 +126,9 @@
   color: var(--anaranjado);
   cursor: pointer; }
 
+.icon--bloqueado {
+  color: var(--tenue); }
+
 @media (min-width: 820px) {
   .menuNavegacion {
     width: 3rem;
@@ -163,13 +166,13 @@
     .menuNavegacion__filtrar {
       grid-column: 1/2;
       grid-row: 3; }
-    .menuNavegacion__historial {
+    .menuNavegacion__hemeroteca {
       grid-column: 1/2;
       grid-row: 4; }
     .menuNavegacion__crear {
       grid-column: 1/2;
       grid-row: 5; }
-    .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__historial, .menuNavegacion__crear {
+    .menuNavegacion__eventos, .menuNavegacion__filtrar, .menuNavegacion__hemeroteca, .menuNavegacion__crear {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -257,7 +260,7 @@
     display: none; }
   .menuNavegacionExtendida__crear {
     cursor: pointer; }
-  .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__historial, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
+  .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
     width: 100%;
     padding: 1rem;
     display: -webkit-box;
@@ -277,7 +280,15 @@
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    color: var(--anaranjado); }
+    color: var(--anaranjado);
+    font-size: 1rem;
+    font-weight: 400; }
+  .menuNavegacionExtendida__filtrar {
+    color: var(--oxford);
+    font-weight: 300; }
+  .menuNavegacionExtendida__hemeroteca {
+    color: var(--oxford);
+    font-weight: 300; }
   .menuNavegacionExtendida__linea {
     display: initial;
     background-color: var(--ahuesado);
@@ -321,13 +332,14 @@
     .menuNavegacionExtendida__filtrar {
       grid-column: 1/2;
       grid-row: 3/4; }
-    .menuNavegacionExtendida__historial {
+    .menuNavegacionExtendida__hemeroteca {
       grid-column: 1/2;
       grid-row: 4/5; }
     .menuNavegacionExtendida__crear {
       grid-column: 1/2;
-      grid-row: 5/6; }
-    .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__historial, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
+      grid-row: 5/6;
+      border-bottom: 1px var(--ahuesadoTransparente) solid; }
+    .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear, .menuNavegacionExtendida__faseBeta {
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
@@ -346,8 +358,11 @@
       align-content: center;
       width: 100%;
       height: 100%;
-      border-top: 0;
       color: var(--blanco); }
+    .menuNavegacionExtendida__eventos, .menuNavegacionExtendida__filtrar, .menuNavegacionExtendida__hemeroteca, .menuNavegacionExtendida__crear {
+      border-top: 1px var(--ahuesadoTransparente) solid;
+      font-size: 1.5rem;
+      font-weight: 100; }
     .menuNavegacionExtendida__linea {
       display: none; }
     .menuNavegacionExtendida__faseBeta {
@@ -357,7 +372,8 @@
       -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
       justify-content: flex-end;
-      padding: 0; }
+      padding: 0;
+      font-weight: 100; }
     .menuNavegacionExtendida__icon {
       display: none; }
     .menuNavegacionExtendida__texto {
@@ -537,9 +553,9 @@
   .tarjeta__nombreEvento {
     grid-column: 1/3;
     grid-row: 3;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 80%;
-    color: var(--oxford);
+    color: var(--tenue);
     line-height: 1.2; }
   .tarjeta__sedeEvento {
     grid-column: 1/3;
@@ -555,6 +571,31 @@
     font-size: 80%;
     display: none; }
 
+.artistico {
+  color: var(--artistico); }
+
+.deportivo {
+  color: var(--deportivo); }
+
+.comercial {
+  color: var(--comercial); }
+
+.cultural {
+  color: var(--cultural); }
+
+/*////////////////  ANIMACIONES /
+
+@keyframes fondoTarjetaContenedor {
+	0% {
+		background-color: var(--blanco);
+	}
+	
+	100% {
+		background-color: var(--ahuesadoTransparente);
+	}
+	
+}
+///////////////*/
 /* -------- 1 --------*/
 /* -------- 1 --------*/
 /* -------- Modal Crear Evento --------*/
@@ -628,8 +669,14 @@
 
 .modal__portada {
   width: 100%;
-  height: 100vh;
-  background-color: var(--profundo); }
+  height: auto;
+  background-color: var(--profundo);
+  background: url("../images/landing_portada_moviles.jpg") no-repeat;
+  background-position: 50% 50%;
+  background-size: cover; }
+  @media (min-width: 820px) {
+    .modal__portada {
+      height: 100vh; } }
 
 .modal__mediosDeContacto {
   width: 100%;
