--- a/css/normalize.css
+++ b/css/normalize.css
@@ -34,10 +34,15 @@ body {
   --oxford: #262626;
   --profundo: #171717;
   --ahuesadoTransparente: rgba(237, 239, 244, 0.5);
+  --marfilTransparente: rgba(237, 239, 244, 0.5);
   --tenueTransparente: rgba(129, 129, 129, 0.5);
   --oxfordTransparente: rgba(38, 38, 38, 0.5);
   --profundoTransparente: rgba(23, 23, 23, 0.5);
-  /*--sombra*/ }
+  /*--sombra*/
+  --artistico: black;
+  --deportivo: black;
+  --comercial: black;
+  --cultural: #00c4c5; }
 
 article,
 aside,
