--- a/scss/index/_menu_navegacion_extendida.scss
+++ b/scss/index/_menu_navegacion_extendida.scss
@@ -22,17 +22,13 @@
 
 	&__eventos {}
 
-	&__filtrar {}
-
-	&__historial {}
-
 	&__crear {
 		cursor: pointer;
 	}
 
 	&__eventos,
 	&__filtrar,
-	&__historial,
+	&__hemeroteca,
 	&__crear,
 	&__faseBeta {
 		width: 100%;
@@ -42,6 +38,18 @@
 		justify-content: flex-start;
 		align-items: center;
 		color: var(--anaranjado);
+		font-size: 1rem;
+		font-weight: 400;
+	}
+
+	&__filtrar {
+		color: var(--oxford);
+		font-weight: 300;
+	}
+
+	&__hemeroteca {
+		color: var(--oxford);
+		font-weight: 300;
 	}
 
 	&__linea {
@@ -95,7 +103,7 @@
 			grid-row: 3/4;
 		}
 
-		&__historial {
+		&__hemeroteca {
 			grid-column: 1/2;
 			grid-row: 4/5;
 		}
@@ -103,11 +111,12 @@
 		&__crear {
 			grid-column: 1/2;
 			grid-row: 5/6;
+			border-bottom: 1px var(--ahuesadoTransparente) solid;
 		}
 
 		&__eventos, 
 		&__filtrar, 
-		&__historial, 
+		&__hemeroteca, 
 		&__crear,
 		&__faseBeta {
 			display: flex;
@@ -116,8 +125,16 @@
 			align-content: center;
 			width: 100%;
 			height: 100%;
-			border-top: 0;
 			color: var(--blanco);
+		}
+		
+		&__eventos, 
+		&__filtrar, 
+		&__hemeroteca, 
+		&__crear {
+			border-top: 1px var(--ahuesadoTransparente) solid;
+			font-size: 1.5rem;
+			font-weight: 100;
 		}
 
 		&__linea {
@@ -129,6 +146,7 @@
 			grid-row: 6/7;
 			justify-content: flex-end;
 			padding: 0;
+			font-weight: 100;
 		}
 
 		&__icon {
