--- a/scss/index/_tarjetas.scss
+++ b/scss/index/_tarjetas.scss
@@ -100,9 +100,9 @@
 	&__nombreEvento {
 		grid-column: 1/3;
 		grid-row: 3;
-		font-weight: 800;
+		font-weight: 700;
 		font-size: 80%;
-		color: var(--oxford);
+		color: var(--tenue);
 		line-height: 1.2;
 	}
 
@@ -129,4 +129,33 @@
 	@include xl{}
 }
 
+.artistico {
+  color: var(--artistico);
+}
 
+.deportivo {
+  color: var(--deportivo);
+}
+
+.comercial {
+  color: var(--comercial);
+}
+
+.cultural {
+  color: var(--cultural);
+}
+
+
+/*////////////////  ANIMACIONES /
+
+@keyframes fondoTarjetaContenedor {
+	0% {
+		background-color: var(--blanco);
+	}
+	
+	100% {
+		background-color: var(--ahuesadoTransparente);
+	}
+	
+}
+///////////////*/
