--- a/scss/landingPage/_comunica.scss
+++ b/scss/landingPage/_comunica.scss
@@ -2,7 +2,9 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr 1fr;
-	padding: 0 2rem;
+	background-color: var(--blanco);
+	padding: 1rem;
+	height: 50vh;
 
 	&__informacion {
 		grid-column: 1/2;
@@ -12,9 +14,15 @@
 		justify-content: center;
 		align-items: center;
 		text-align: center;
+		position: relative;
+		z-index: 9;
+		// background-color: rgba(255, 255, 255, 0.90);
 	}
-			
-			
+
+	&__informacion p {
+		font-weight: 600;
+	}
+				
 	&__imagen{
 		grid-column: 1/2;
 		grid-row: 1/2;
@@ -22,10 +30,25 @@
 		justify-content: center;
 		align-items: center;
 		flex-flow: column;
+		width: 100%;
+		height: 100%;
+		background: url("../images/") no-repeat;
+		background-position: 50% 50%;
+		background-size: cover;
+		position: relative;
+		z-index: 8;
 	}
 
+	&__imagen img {
+		width: 4rem;
+	}
 
 	@include sm {
+		height: 30vh;
+
+		&__informacion p {
+			width: 80%;
+		}
 		
 	}
 
@@ -42,14 +65,27 @@
 			align-items: flex-start;
 			text-align: left;
 		}
-			
+
+		&__informacion p {
+			width: 100%;
+			font-weight: 400;
+		}
 			
 		&__imagen{
 			grid-column: 1/2;
 			grid-row: 1/2;
 			justify-content: center;
+			background: url("../images/comunica.svg") no-repeat;
+		}
+
+		&__imagen img {
+			width: 30%;
 		}
 	}
 
-	@include lg {}
+	@include lg {
+		&__imagen{
+			background-size: contain;
+		}
+	}
 }
