--- a/scss/landingPage/_descripcion.scss
+++ b/scss/landingPage/_descripcion.scss
@@ -1,54 +1,65 @@
-.agora {
+.descripcion {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 1fr;
+	grid-template-rows: 1fr 1fr;
 	background-color: var(--blanco);
-	margin: 1rem;
-	height: 40vh;
+	padding: 1rem;
+	height: 50vh;
+	
 
-	&__imagen {		
+	&__imagen {	
+		grid-column: 1/2;
+		grid-row: 1/2;	
 		display: flex;
+		flex-flow: column;
 		justify-content: center;
 		align-items: center;
-		display: none;
 	}	
+
+	&__imagen img {
+		width: 4rem;
+	}
 
 	&__texto {		
 		grid-column: 1/2;
-		grid-row: 1/2;
+		grid-row: 2/3;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-flow: column;		
-		margin: 0.5rem;
 		color: var(--oxford);
-		text-align: center;
-		font-weight: 500;
-		
 	}
 
 	&__texto p {
 		width: 90%;
 		font-size: 1rem;
+		text-align: center;
+		font-weight: 500;
 	}
 
+	@include sm {
+		height: auto;
+
+		&__texto p {
+			width: 80%;
+			font-size: 1.5rem;		
+		}
+
+	}
 
 	@include md {
 		grid-template-columns: 1fr;
-		grid-template-rows: 50% 50%;
-		height: auto;
+		grid-template-rows: 1fr 1fr;
 
 		&__imagen {
 			grid-column: 1/2;
 			grid-row: 1/2;
-			display: flex;
-			justify-content: center;
+			justify-content: flex-end;
 			align-items: center;
 		}
 
 		&__imagen img {
-			
-			width: 50%;
+			width: 6rem;
 		}
 
 		&__texto {
@@ -57,8 +68,13 @@
 		}
 
 		&__texto p {
-			width: 75%;
-			font-size: 2rem;
+			width: 65%;
+		}
+	}
+
+	@include lg {
+		&__texto p {
+			width: 55%;
 		}
 	}
 }
