--- a/scss/landingPage/_descubre.scss
+++ b/scss/landingPage/_descubre.scss
@@ -3,8 +3,8 @@
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr 1fr;
 	background-color: var(--marfil);
-	padding: 0 2rem;
-	height: auto;
+	padding: 1rem;
+	height: 50vh;
 
 	&__informacion {
 		grid-column: 1/2;
@@ -15,8 +15,11 @@
 		align-items: center;
 		text-align: center;
 	}
-			
-			
+
+	&__informacion p {
+		font-weight: 600;
+	}
+					
 	&__imagen{
 		grid-column: 1/2;
 		grid-row: 1/2;
@@ -24,11 +27,23 @@
 		justify-content: center;
 		align-items: center;
 		flex-flow: column;
+		width: 100%;
+		height: 100%;
+		// background: url("../images/compass.svg") no-repeat;
+		// background-position: 50% 50%;
+		// background-size: contain;
 	}
 
+	&__imagen img {
+		width: 4rem;
+	}
 
 	@include sm {
+		height: 30vh;
 		
+		&__informacion p {
+			width: 80%;
+		}
 	}
 
 	@include md {
@@ -44,14 +59,27 @@
 			align-items: flex-end;
 			text-align: right;
 		}
-			
-			
+
+		&__informacion p {
+			width: 100%;
+			font-weight: 400;
+		}
+				
 		&__imagen{
 			grid-column: 2/3;
 			grid-row: 1/2;
 			justify-content: center;
+			// background: url("../images/descubre.svg") no-repeat;
+		}
+
+		&__imagen img {
+			width: 30%;
 		}
 	}
 
-	@include lg {}
+	@include lg {
+		&__imagen{
+			background-size: contain;
+		}
+	}
 }
