--- a/scss/landingPage/_explorar.scss
+++ b/scss/landingPage/_explorar.scss
@@ -1,10 +1,15 @@
 .explorar {
-	background-color: var(--magenta);
-	height: 50vh;
+	background-color: var(--melon);
+	height: 30vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: column;
+
+	&__boton {
+		position: absolute;
+		z-index: 9;
+	}
 	
 
 	&__boton a {
@@ -23,4 +28,17 @@
 		color: var(--magenta);
 	}
 	
+	&__imagen {
+		background: url("../images/explorar.jpg") no-repeat;
+		background-position: 50% 50%;
+		background-size: cover;
+		z-index: 8;
+		width: 100%;
+    	height: 100%;
+    	position: relative;
+	}
+
+	@include md {
+		height: 40vh;
+	}
 }
