--- a/scss/landingPage/_portada.scss
+++ b/scss/landingPage/_portada.scss
@@ -5,9 +5,8 @@
 	grid-template-rows: 50% auto auto auto 1fr;
 	// padding: ;
 	width: 100%;
-	height: 80vh;
-	// background-color: var(--magenta);
-	background: url("../images/landing_portada_.jpg") no-repeat;
+	height: auto;
+	background: url("../images/landing_portada_moviles.jpg") no-repeat, var(--melon);
 	background-position: 50% 50%;
 	background-size: cover;
 	z-index: 10;
@@ -28,6 +27,7 @@
 		grid-column: 1/2;
 		grid-row: 1/2;
 		width: 100%;
+		padding: 1rem 0;
 	}
 
 	&__imagen img {
@@ -37,7 +37,7 @@
 	&__titulo {
 		grid-column: 1/2;
 		grid-row: 2/3;	
-		font-weight: 200;
+		font-weight: 300;
 		font-size: 1.25rem;
 		text-align: center;
 	}
@@ -52,7 +52,7 @@
 		// font-weight: ;
 		// width: ;
 		text-align: center;
-		font-weight: 200;
+		font-weight: 400;
 		font-size: 0.75rem;
 		width: 90%;
 	}
@@ -70,8 +70,8 @@
 	}
 
 	&__boton {
-		// grid-column: ;
-		// grid-row: ;
+		grid-column: 1/2;
+		grid-row: 5/6;
 	}
 
 	&__boton a {
@@ -100,7 +100,7 @@
 		&__texto p {
 			text-align: center;
 			font-weight: 300;
-			font-size: 1rem;
+			font-size: 1.25rem;
 		}
 
 	}
@@ -109,22 +109,24 @@
 		grid-template-columns: 1fr;
 		grid-template-rows: 60% auto auto auto 1fr;
 		padding: 2rem 1rem 0 1rem;
+		background: url("../images/landing_portada.jpg") no-repeat;
 		height: 100vh;
 
 		&__imagen {
 			grid-column: 1/2;
 			grid-row: 1/2;
 			width: 100%;
+
 		}
 
 		&__imagen img {
-			width: 40%;
+			width: 50%;
 		}
 
 		&__titulo {
 			grid-column: 1/2;
 			grid-row: 2/3;
-			font-weight: 300;	
+			font-weight: 400;	
 		}
 		
 
