--- a/scss/normalize.scss
+++ b/scss/normalize.scss
@@ -38,12 +38,17 @@ body {
   --oxford: rgba(38, 38, 38, 1);
   --profundo:rgba(23, 23, 23, 1);
   --ahuesadoTransparente: rgba(237, 239, 244, 0.5);
+  --marfilTransparente: rgba(237, 239, 244, 0.5);
   --tenueTransparente: rgba(129, 129, 129, 0.5);
   --oxfordTransparente: rgba(38, 38, 38, 0.5);
   --profundoTransparente: rgba(23, 23, 23, 0.5);
   /*--sombra*/
-}
 
+  --artistico: rgba(0, 0, 0, 1);
+  --deportivo: rgba(0, 0, 0, 1);
+  --comercial: rgba(0, 0, 0, 1);
+  --cultural: rgba(0, 196, 197, 1);
+}
 
 article,
 aside,
