Index -- Estilo y grid en el modal de Crear

--- a/jade/landingPage.jade
+++ b/jade/landingPage.jade
@@ -36,7 +36,7 @@ head
 	link(rel="icon" type="image/png" href="images/icon.png")
 	
 	//Icon Font
-	link(href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet")
+	link(href="font/styles.css" rel="stylesheet")
 
 	//Roboto Font
 	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet")
@@ -114,8 +114,7 @@ body
 
 		h1.portada__titulo Descubre. Comunica tu Evento
 		div.portada__texto 
-			p Encuentra el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; 
-			| crea el espacio para el evento que organizas y has que todos lo vean.
+			p Encuentra el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; crea el espacio para el evento que organizas y has que todos lo vean.
 		div.portada__linea
 			div
 		div.portada__boton
