--- a/css/agora.css
+++ b/css/agora.css
@@ -555,7 +555,7 @@
     grid-row: 3;
     font-weight: 700;
     font-size: 80%;
-    color: var(--tenue);
+    color: var(--a);
     line-height: 1.2; }
   .tarjeta__sedeEvento {
     grid-column: 1/3;
@@ -613,16 +613,12 @@
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   overflow-y: auto;
-  padding: 0 5%;
+  padding: 1.5rem 5%;
   background-color: var(--profundoTransparente); }
-  @media (min-width: 820px) {
-    .modal__contenedor {
-      grid-template-columns: 70% 30%;
-      grid-template-rows: auto; } }
   @media (min-width: 992px) {
     .modal__contenedor {
-      padding: 0 5%;
-      grid-template-columns: 80% 20%;
+      padding: 1rem 5%;
+      grid-template-columns: 70% 30%;
       grid-template-rows: auto; } }
 
 .modal__displayNone {
@@ -658,11 +654,10 @@
 .modal__informacion {
   width: 100%;
   height: 100%;
-  margin: 1rem 0;
   grid-column: 1/2;
   grid-row: 1/2;
-  background-color: var(--blanco); }
-  @media (min-width: 820px) {
+  background-color: var(--ahuesado); }
+  @media (min-width: 992px) {
     .modal__informacion {
       grid-column: 1/2;
       grid-row: 1/2; } }
@@ -673,30 +668,271 @@
   background-color: var(--profundo);
   background: url("../images/landing_portada_moviles.jpg") no-repeat;
   background-position: 50% 50%;
-  background-size: cover; }
+  background-size: cover;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: var(--blanco);
+  text-align: center; }
   @media (min-width: 820px) {
     .modal__portada {
-      height: 100vh; } }
+      height: 80vh;
+      padding: 10%;
+      font-weight: 300; } }
+
+.modal__logo {
+  width: 80%;
+  padding-bottom: 1rem; }
+  @media (min-width: 820px) {
+    .modal__logo {
+      width: 40%; } }
+
+.modal__portada h3 {
+  font-weight: 400; }
+
+.modal__linea {
+  width: 80%; }
+
+.modal__linea div {
+  margin: 0.5rem 0;
+  background-color: var(--ahuesadoTransparente);
+  height: 1px;
+  width: 90%; }
+
+.modal__portada h5 {
+  font-weight: 300; }
+
+.modal__datosEvento {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50% 50%;
+  width: 100%;
+  height: auto;
+  background-color: var(--ceniza); }
+  @media (min-width: 820px) {
+    .modal__datosEvento {
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 1fr;
+      padding: 1rem; } }
+
+.modal__datosInformacion {
+  grid-column: 1/2;
+  grid-row: 2/3; }
+  @media (min-width: 820px) {
+    .modal__datosInformacion {
+      grid-column: 1/2;
+      grid-row: 1/2; } }
+
+.modal__datosImagen {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  padding: 0 40%; }
+  @media (min-width: 820px) {
+    .modal__datosImagen {
+      grid-column: 2/3;
+      grid-row: 1/2; } }
+
+.modal__politicas {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50% 50%;
+  width: 100%;
+  height: auto;
+  background-color: var(--marfil); }
+  @media (min-width: 820px) {
+    .modal__politicas {
+      grid-template-columns: 50% 50%;
+      grid-template-rows: 1fr;
+      padding: 1rem; } }
+
+.modal__politicasInformacion {
+  grid-column: 1/2;
+  grid-row: 2/3; }
+  @media (min-width: 820px) {
+    .modal__politicasInformacion {
+      grid-column: 2/3;
+      grid-row: 1/2; } }
+
+.modal__politicasImagen {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  padding: 0 40%; }
+  @media (min-width: 820px) {
+    .modal__politicasImagen {
+      grid-column: 1/2;
+      grid-row: 1/2; } }
+
+.modal__pie {
+  width: 100%;
+  background-color: var(--navy);
+  color: var(--ahuesado);
+  text-align: center; }
+
+.modal__pie p {
+  font-size: 60%; }
 
 .modal__mediosDeContacto {
   width: 100%;
   height: 100%;
-  margin: 1rem 0;
-  background-color: var(--anaranjado);
+  background-color: var(--blanco);
   grid-column: 1/2;
   grid-row: 2/3; }
-  @media (min-width: 820px) {
+  @media (min-width: 992px) {
     .modal__mediosDeContacto {
       grid-column: 2/3;
       grid-row: 1/2; } }
 
 .modal__sticker {
-  position: relative; }
+  position: relative;
+  margin: 0.5rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, auto); }
+  @media (min-width: 576px) {
+    .modal__sticker {
+      grid-template-columns: 50% 50%;
+      grid-template-rows: repeat(3, auto); } }
   @media (min-width: 820px) {
     .modal__sticker {
       position: -webkit-sticky;
       position: sticky;
-      top: 0; } }
+      top: 0;
+      margin: 1rem 0.5rem; } }
+  @media (min-width: 992px) {
+    .modal__sticker {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, auto);
+      margin: 1rem; } }
+
+.modal__sticker p {
+  line-height: 1;
+  font-weight: 300;
+  grid-column: 1/2;
+  grid-row: 1/2; }
+  @media (min-width: 576px) {
+    .modal__sticker p {
+      grid-column: 1/3;
+      grid-row: 1/2; } }
+  @media (min-width: 992px) {
+    .modal__sticker p {
+      grid-column: 1/2;
+      grid-row: 1/2; } }
+
+.modal__correoWeb, .modal__facebook, .modal__formulario {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: 1fr 1fr;
+  margin-top: 0.5rem; }
+  @media (min-width: 576px) {
+    .modal__correoWeb, .modal__facebook, .modal__formulario {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto;
+      margin-top: 1rem; } }
+  @media (min-width: 992px) {
+    .modal__correoWeb, .modal__facebook, .modal__formulario {
+      grid-template-columns: 30% 70%;
+      grid-template-rows: 1fr 1fr;
+      margin-top: 1.5rem; } }
+
+.modal__icono {
+  grid-column: 1/2;
+  grid-row: 1/4;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-right: 0.5rem; }
+  @media (min-width: 576px) {
+    .modal__icono {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      width: 50%; } }
+  @media (min-width: 992px) {
+    .modal__icono {
+      padding-right: 1rem;
+      grid-column: 1/2;
+      grid-row: 1/4;
+      width: 100%; } }
+
+.modal__medio {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-weight: 400; }
+  @media (min-width: 576px) {
+    .modal__medio {
+      grid-column: 1/2;
+      grid-row: 2/3; } }
+  @media (min-width: 992px) {
+    .modal__medio {
+      grid-column: 2/3;
+      grid-row: 1/2; } }
+
+.modal__linkMedio {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: var(--profundo);
+  text-align: justify;
+  text-justify: inter-word;
+  font-weight: 300; }
+  @media (min-width: 576px) {
+    .modal__linkMedio {
+      grid-column: 1/2;
+      grid-row: 3/4; } }
+  @media (min-width: 992px) {
+    .modal__linkMedio {
+      grid-column: 2/3;
+      grid-row: 2/3; } }
 
 /* -------- 1 --------*/
 /* -------- 1 --------*/
