--- a/jade/index.jade
+++ b/jade/index.jade
@@ -36,7 +36,7 @@ head
 	link(rel="icon" type="image/png" href="images/icon.png")
 	
 	//Icon Font
-	link(href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet")
+	link(href="font/styles.css" rel="stylesheet")
 	
 	//Roboto Font
 	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
@@ -56,20 +56,51 @@ body
 		button.modal__cerrar#cerrar: i.icon-cerrar
 		div.modal__informacion
 			div.modal__portada
-				p Comunica tu Evento
+				img.modal__logo(src="images/agora_logo_blanco.svg")
+				h3 Envíanos tus eventos próximos a suceder y deja que la plataforma destaque la información importante de forma detallada.
+				div.modal__linea: div
+				h5 Envíanos tus eventos que estén próximos a suceder y destaca la información importante de forma detallada.
+			
+			div.modal__datosEvento
+				div.modal__datosImagen
+					img.imagen-fluida(src="images/crear__datos.png")
+				div.modal__datosInformacion
+					p La información que nos debes enviar de tus eventos es:
+					ul
+						li.modal__itemDatos Nombre del Evento
+						li.modal__itemDatos Fechas del Evento
+						li.modal__itemDatos Horarios del Evento
+						li.modal__itemDatos Sede del Evento
+						li.modal__itemDatos Enlace del Evento 
+							span (Facebook, Sitio Web)
+						li.modal__itemDatos Cartel del Evento
+
 			div.modal__politicas
-				p Los Eventos se aprueban y muestran en la plataforma en un plazo de 24 horas.
-				p Algunos eventos demoran más en la fase de revisión, esto no significa que no se vayan a subir y aprobar.
+				div.modal__politicasImagen
+					img.imagen-fluida(src="images/crear__politicas.png")
+				div.modal__politicasInformacion
+					p Los Eventos se aprueban y muestran en la plataforma en un plazo de 24 horas.
+					p Algunos eventos demoran más en la fase de revisión, esto no significa que no se vayan a subir y aprobar.
+			
+			div.modal__pie
+				p ágora | Todos los Eventos, un mismo lugar
+				
 		div.modal__mediosDeContacto
 			div.modal__sticker
-				div.modal__facebook
-					i.icon-facebook
+				p Diseñamos tres formas para subir tu evento y así puedas elegir la que más te acomoda
 				div.modal__correoWeb
-					i.icon-facebook
-				div.modal__formulario
-					i.icon-facebook
-			
+					div.modal__icono: img.imagen-fluida(src="images/crear__correo.png")
+					h5.modal__medio Correo Web
+					a.modal__linkMedio(href="mailto:agoraeventos@outlook.com") agoraeventos@outlook.com	
+				div.modal__facebook
+					div.modal__icono: img.imagen-fluida(src="images/crear__facebook.png")
+					h5.modal__medio Facebook
+					a.modal__linkMedio(href="")(target="_blank") Visitar
 
+				div.modal__formulario
+					div.modal__icono: img.imagen-fluida(src="images/crear__formulario.png")
+					h5.modal__medio Formulario
+					a.modal__linkMedio(href="")(target="_blank") Mostrar
 
 
 	//Barra de Navegación
